--- a/indexinicio.html
+++ b/indexinicio.html
@@ -50,7 +50,7 @@
 	<div id="header">
 	<nav>
 	<ul class="nav">
-		<li><a href="index.html">Inicio</a></li>
+		<li><a href="indexinicio.html">Inicio</a></li>
 		<li><a href="">Páginas</a>
 		<ul>
 			<li><a href="Pobladdores.html">Primeros pobladores</a></li>
