--- a/indexinicio.html
+++ b/indexinicio.html
@@ -53,13 +53,13 @@
 		<li><a href="indexinicio.html">Inicio</a></li>
 		<li><a href="">Páginas</a>
 		<ul>
-			<li><a href="Pobladdores.html">Primeros pobladores</a></li>
-			<li><a href="Innnicios.html">Época prehispánica</a></li>
-			<li><a href="Commmunid.html">Comunidades</a></li>
-			<li><a href="Mitttos.html">Mitos y leyendas</a></li>
-			<li><a href="Lugggares.html">Lugares turísticos</a></li>
+			<li><a href="index_pobladores.html">Primeros pobladores</a></li>
+			<li><a href="index_inicios.html">Época prehispánica</a></li>
+			<li><a href="index_comunidad.html">Comunidades</a></li>
+			<li><a href="index_mitos.html">Mitos y leyendas</a></li>
+			<li><a href="index_lugares.html">Lugares turísticos</a></li>
 		</ul>
-		<li><a href="equippo.html">Equipo</a></li>
+		<li><a href="index_equipo.html">Equipo</a></li>
 	</ul>
 	</nav>
 	</div>Ya no odio este color
