--- a/index_lugares.html
+++ b/index_lugares.html
@@ -62,32 +62,32 @@
 	<nav>
 	<ul class="nav">
 		<li><a href="index.html">Inicio</a></li>
-		<li><a href="">Páginas</a>
+		<li><a href="">PÃ¡ginas</a>
 		<ul>
-			<li><a href="Pobladdores.html">Primeros pobladores</a></li>
-			<li><a href="Innnicios.html">Época prehispánica</a></li>
-			<li><a href="Commmunid.html">Comunidades</a></li>
-			<li><a href="Mitttos.html">Mitos y leyendas</a></li>
-			<li><a href="Lugggares.html">Lugares turísticos</a></li>
+			<li><a href="index_pobladores.html">Primeros pobladores</a></li>
+			<li><a href="index_inicios.html">Ã‰poca prehispÃ¡nica</a></li>
+			<li><a href="index_comunidad.html">Comunidades</a></li>
+			<li><a href="index_mitos.html">Mitos y leyendas</a></li>
+			<li><a href="index_lugares.html">Lugares turÃ­sticos</a></li>
 		</ul>
-		<li><a href="equippo.html">Equipo</a></li>
+		<li><a href="index_equipo.html">Equipo</a></li>
 	</ul>
 	</nav>
 	</div><font size="3">Ya no odio este color</font><br><br><br>
 <p style="color:#000000";>
-<h1> Lugares Turísticos </h1>
+<h1> Lugares TurÃ­sticos </h1>
 </p></body>
 </CENTER>
 <font size:5>
 <BODY> 
 <body><p style="color:#000000";>
-Ojocaliente es una localidad y cabecera municipal ubicada en el estado de Zacatecas, México.
+Ojocaliente es una localidad y cabecera municipal ubicada en el estado de Zacatecas, MÃ©xico.
 Se encuentra en la parte sureste del estado, a una distancia considerable de la capital, Zacatecas.
 <BODY bgcolor=E2E8F3>
 <CENTER>
 <BR>
 <BR>
-Lugares Turísticos de Ojocaliente, Zacatecas.
+Lugares TurÃ­sticos de Ojocaliente, Zacatecas.
 <BR>
 <BR>
 1. Los balnearios <BR>
@@ -95,10 +95,10 @@ Calle Independecia, 98710.
 <BR>
 <BR>
 2. Museo de Ojocaliente <BR>
-Las Lajas Adolfo López Mateos s/n. Centro CP 98707, Ojocaliente, Zacatecas.
+Las Lajas Adolfo LÃ³pez Mateos s/n. Centro CP 98707, Ojocaliente, Zacatecas.
 <BR>
 <BR>
-3. Parroquia de Nuestra Señora de los Milagros <BR>
+3. Parroquia de Nuestra SeÃ±ora de los Milagros <BR>
 Plaza Principal No. 15, Col. Centro, C.P. 98700, Ojocaliente, Zacatecas,
 <BR>
 <BR>
@@ -118,8 +118,8 @@ Cueva de abalos, El Refugio tlacotes, 98703,Zacatecas,Zac.
 	</div>
  <CENTER>
  <div style="background-color: #ffffff; color: #000; border-radius: 5px; padding: 5px; width: 25%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
-            <img src="https://ojocalientezacc.tripod.com//sitebuildercontent/sitebuilderpictures/i7.jpg" alt=Parroquia de Nuestra Señora de los Milagros,Ojocaliente,Zac" style="width: 70%; height: auto; border-radius: 5px; display: block; margin: 0 auto;">
-            <p><strong>Parroquia de Nuestra Señora de los Milagros.
+            <img src="https://ojocalientezacc.tripod.com//sitebuildercontent/sitebuilderpictures/i7.jpg" alt=Parroquia de Nuestra SeÃ±ora de los Milagros,Ojocaliente,Zac" style="width: 70%; height: auto; border-radius: 5px; display: block; margin: 0 auto;">
+            <p><strong>Parroquia de Nuestra SeÃ±ora de los Milagros.
 Ojocaliente,Zac.</strong><br> <td><div style="text-align: center;">
 <iframe width="250" height="200" src="https://www.youtube.com/embed/1g65mKnxYG8?si=Y85WWxXTRyTimHU9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div> </td> 
