--- a/index_lugares.html
+++ b/index_lugares.html
@@ -61,7 +61,7 @@
 <div id="header">
 	<nav>
 	<ul class="nav">
-		<li><a href="index.html">Inicio</a></li>
+		<li><a href="indexinicio.html">Inicio</a></li>
 		<li><a href="">Páginas</a>
 		<ul>
 			<li><a href="index_pobladores.html">Primeros pobladores</a></li>
